<resources>
    <string name="app_name">Sticky</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>

    <!-- Navigation Drawer Items -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_board">Board</string>
    <string name="navigation_drawer_organizer">Note Organizer</string>
    <string name="navigation_drawer_feedback">Feedback</string>
    <string name="navigation_drawer_tips">Tips</string>
    <string name="navigation_drawer_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_camera">Crop</string>
    <string name="title_activity_tips">Tips</string>

    <!-- Preference Titles -->
    <string name="appearance_header">Appearance</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="theme_title">App Theme</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Tips Text  -->
    <!--    <string name="tips_text">When scanning a note:\n\t\t1) Use flash to improve the quality of the image.\n\t\t2) Hold on the shutter button and let go when ready to\n\t\t   capture to reduce shake.</string>-->

    <string name="tips_text"><![CDATA[
        <style type="text/css">
            .tab { margin-left: 40px; }
        </style>
        When scanning a note:<br/>
        <p class="tab"><b>1) </b>Use flash to improve the quality of the image</p>
        <p class="tab"><b>2) </b>Hold the shutter button and let go of it when ready to scan.<p>
    ]]></string>
</resources>